--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,42 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-image: url('http://www.vanessametonini.com.br/imersaocss/a1/img/fundo.jpg');
+  background-image: url('../img/fundo.jpg');
   background-size: auto 100vh;
   height: 100vh;
   font-family: Arial;
+  font-size: 12px;
+}
+
+/* Se a tela tiver pelo menos 400px de largura vai carregar esses estilos */
+@media (min-width: 400px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 600px) {
+  body {
+    font-size: 18px;
+  }
+}
+
+header {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu {
   background-color: white;
+  position: fixed;
+  top: 0;
+  width: 100vw;
 }
 
 .menu ul {
@@ -16,6 +46,11 @@ body {
 
 .menu li {
   list-style: none;
+}
+
+.menu a {
+  display: block;
+  padding: 10px;
 }
 
 a {
@@ -33,6 +68,15 @@ a:hover {
   text-align: center;
 }
 
+.site-title {
+  font-size: 4em;
+}
+
 .site-subtitle {
   font-style: italic;
+}
+
+.img-portfolio {
+  width: 180px;
+  height: 180px;
 }
